# app-diabetes

./: LICENSE  README.md  config.yaml  pyproject.toml  streamlit_app.py
.github/workflows/: bandit.yml  mypy.yml  pytest.yml
src/app_diabetes/: dataclasses.py  target_hba1c.py
tests/: test_dataclasses.py  test_target_hba1c.py
