[tool.poetry]
name = "app-diabetes"
version = "0.1.0"
description = ""
authors = ["Alberto Camara <camara@protonmail.com>"]
readme = "README.md"
packages = [{include = "app_diabetes"}]

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.19.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
