[tool.poetry]
name = "app-diabetes"
version = "0.1.0"
description = ""
authors = ["Alberto Camara <camara@protonmail.com>"]
readme = "README.md"
packages = [{include = "app_diabetes", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.20.0"
streamlit-authenticator = "^0.2.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
behave = "^1.2.6"
black = "^23.1.0"
mypy = "^1.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
